<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="102dp">

        <TextView
            android:id="@+id/loginLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="16sp"></TextView>

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:autofillHints=""
            android:hint="@string/username"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            android:textSize="16sp"></EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="16sp"></EditText>

        <TextView
            android:id="@+id/statusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#F44336"
            android:textSize="16sp"></TextView>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="16sp"
            app:backgroundTint="#4CAF50"></Button>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="16sp"
            app:backgroundTint="#4CAF50"></Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>