...
    <TableLayout
        android:id="@+id/postTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="39dp"
        app:layout_constraintTop_toBottomOf="@+id/searchedText"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/statusLabel4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="156dp"
        android:layout_weight="1"
...
