...
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="ver_pass">Verify Password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_from_registration">Already have an account?</string>

    <!-- Strings used for post creation page -->
    <string name="item_name">Item Name</string>
...
