<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="334dp"
        android:layout_height="301dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginBottom="268dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/distanceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set Range (Km) (Max 1000km):" />

        <EditText
            android:id="@+id/distanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/catTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Preferred Category:" />

        <Spinner
            android:id="@+id/catListPreference"
            android:layout_width="267dp"
            android:layout_height="56dp"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginBottom="92dp"
            android:layout_weight="1"
            android:entries="@array/categories_array"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/statusLabel3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#F44336"
            android:textSize="16dp"></TextView>

        <Button
            android:id="@+id/savePref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="save" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>